# planescape_code

./: .gitignore  INSTALL.old  Makefile.am  Makefile.git  README.md  configure.ac
admin/: acinclude.m4.in  flex.skl  moc_edit.pl
admin/tools/: autorun  ps-mailer
etc/: planescape.xml.template  plugin.xml.template
libdreamland/: Makefile.am  Makefile.inc  dl
libdreamland/alloc/: oneallocate.cpp
libdreamland/fenia/: Makefile.am  codesource.h  exp-tree.cpp  exp-tree.h  feniaparser.h  function.cpp  function.h  lex.cpp  lex.h  main.cpp  manager-decl.h  manager-impl.h  native.cpp  object.cpp  object.h  parse.y++  phase.cpp  phase.h  register-decl.h  register-impl.h  scan.l++  scope.h  test.h  xmlregister.cpp  xmlregister.h
libdreamland/gref/: Makefile.am  globalregistry.cpp  globalregistry.h  globalregistryelement.h
libdreamland/io/: config_io.h  dbio.cpp  dbio.h  dldirectory.cpp  dldirectory.h  dlfile.cpp  dlfile.h  dlfileloader.cpp  dlfileloader.h  dlfileop.cpp  dlfileop.h  txncontext.cpp  txncontext.h  xmlconfigurable.h  xmlloader.cpp  xmlloader.h  xmltableloader.cpp
libdreamland/l10n/: flexer.cpp  pronouns.cpp  pronouns.h  russianstring.cpp  xmlrussianstring.cpp
libdreamland/lang/: dllist.h  dlmap.h  dlstring.cpp  dlstring.h  exception.cpp  stringset.cpp  stringset.h
libdreamland/moc/: generate.cpp  syn.y++
libdreamland/plugin/: classselfregistratorplugin.h  initializer.cpp  plugin.h  sharedobject.cpp
libdreamland/process/: monitor.cpp  mutex.cpp  process.cpp
libdreamland/regex/: regex2.h
libdreamland/util/: Makefile.am  date.h  dateparser.h  dl_ctype.cpp  dl_ctype.h  dl_strings.cpp  dl_strings.h  exceptionbaddatestring.h  logstream.cpp  logstream.h  parsedate.l++  regexp.cpp  regexp.h  timer.cpp  timer.h
libdreamland/xml/: exceptionvariablenotfound.h  exceptionxmlerror.h  exceptionxsl.h  pstream.h  xmlcontainer.cpp  xmldocument.cpp  xmldocument.h  xmlmatchpattern.h  xmlnode.cpp  xmloptions.h  xmlparser.h  xmlparser.l++  xmlpolymorphvariable.h  xmlreversevector.h  xmlstringlist.cpp  xmlstringlist.h  xmlvector.h
plug-ins/: Makefile.am  Makefile.inc
plug-ins/feniaroot/: Makefile.am  ceval.cpp  cfindref.cpp  characterwrapper.cpp  characterwrapper.h  feniastringext.cpp  idcontainerext.cpp  impl.cpp  nativeext.h  objectwrapper.cpp  objectwrapper.h  pluginnativeimpl.cpp  pluginnativeimpl.h  regcontainerext.cpp  roomwrapper.cpp  roomwrapper.h  root.cpp  root.h  validatetask.cpp  wrap_utils.cpp  wrap_utils.h  wrappermanager.cpp  wrappermanager.h  wrappersplugin.cpp  wrappersplugin.h
plug-ins/runtime/: Makefile.am  act.comm.cpp  act.cpp  act.informative.cpp  act.item.cpp  act.movement.cpp  act.offensive.cpp  act.other.cpp  act.social.cpp  act.social.h  act.wizard.cpp  ai.cpp  ai.h  alias.cpp  ban.cpp  ban.h  boards.cpp  boards.h  case.cpp  case.h  case_table.h  class.cpp  color.cpp  comm.cpp  comm.h  commands.h  constants.cpp  constants.h  db.cpp  db.h  diskio.cpp  diskio.h  events.cpp  events.h  exp_fn.cpp  exp_fn.h  fight.cpp  fight.h  gameconfig.cpp  gameconfig.h  (+59 more)
src/: Makefile.am  Makefile.inc  boards-decl.h  comm-decl.h  db-decl.h  events-decl.h  impl.cpp  interp-decl.h  mail-decl.h  main.cpp  memutils.cpp  memutils.h  spells-decl.h  structs.cpp  structs.h  sysdep.h
src/core/: Makefile.am  mudpluginmanager.cpp  mudpluginmanager.h  mudscheduler.cpp  mudscheduler.h  mudstats.cpp  mudstats.h  planescape.cpp  planescape.h
src/fenia/: Makefile.am  feniamanager.cpp  feniamanager.h  guts.cpp  guts.h  idcontainer.cpp  idcontainer.h  regcontainer.cpp  regcontainer.h  reglist.cpp  reglist.h  schedulerwrapper.cpp  schedulerwrapper.h  wrapperbase.cpp  wrapperbase.h  wrappermanagerbase.cpp  wrappermanagerbase.h  wrappertarget.cpp  wrappertarget.h
src/io/: Makefile.am  mudfile.cpp  mudfile.h  mudfilereader.cpp  mudfilereader.h  textfileloader.cpp  textfileloader.h
src/xformat/: Makefile.am  list_commands.h  parser_id.h  xbody.cpp  xbody.h  xenchant.cpp  xenchant.h  xhelp.cpp  xhelp.h  xmaterial.cpp  xmaterial.h  xmob.cpp  xmob.h  xobj.cpp  xobj.h  xquests.cpp  xquests.h  xsave.cpp  xsave.h  xscripts.cpp  xscripts.h  xshop.cpp  xshop.h  xskills.cpp  xskills.h  xspells.cpp  xspells.h  xtempl.cpp  xtempl.h  xwld.cpp  xwld.h  xzon.cpp  xzon.h
src/xparser/: Makefile.am  expr.cpp  expr.h  parser.cpp  parser.h  parser_const.cpp  parser_const.h  parser_file.cpp  parser_file.h  parser_items.cpp  parser_items.h  parser_readcfg.cpp  parser_readcfg.h  parser_types.h  parser_utils.h  strlib.cpp  strlib.h
