lib_LTLIBRARIES = libruntime.la 

libruntime_la_SOURCES = \
act.comm.cpp \
act.cpp \
act.informative.cpp \
act.item.cpp \
act.movement.cpp \
act.offensive.cpp \
act.other.cpp \
act.social.cpp \
act.wizard.cpp \
ai.cpp \
alias.cpp \
ban.cpp \
boards.cpp \
case.cpp \
class.cpp \
color.cpp \
comm.cpp \
constants.cpp \
db.cpp \
diskio.cpp \
events.cpp \
exp_fn.cpp \
fight.cpp \
gameconfig.cpp \
graph.cpp \
handler.cpp \
help.cpp \
house.cpp \
interpreter.cpp \
iptoaddr.cpp \
item.cpp \
journal.cpp \
limits.cpp \
magic.cpp \
mail.cpp \
mobact.cpp \
mobmax.cpp \
modify.cpp \
pk.cpp \
registration.cpp \
scriptboard.cpp \
shop.cpp \
spec_procs.cpp \
spell_parser.cpp \
spells.cpp \
utils.cpp \
weather.cpp \
xbody.cpp \
xenchant.cpp \
xmaterial.cpp \
xmob.cpp \
xobj.cpp \
xquests.cpp \
xsave.cpp \
xscripts.cpp \
xskills.cpp \
xspells.cpp \
xtempl.cpp \
xwld.cpp \
xzon.cpp \
impl.cpp \
iomanager.cpp \
remorts.cpp

libruntime_la_MOC = 

libruntime_la_LIBADD = 

include $(top_srcdir)/src/Makefile.inc
include $(top_srcdir)/plug-ins/Makefile.inc
INCLUDES = \
$(INCLUDES_SRC) 
