noinst_LTLIBRARIES = libfenia.la

include $(top_srcdir)/src/Makefile.inc
INCLUDES = $(INCLUDES_SRC)

CXXLD = $(CXX)

libfenia_la_SOURCES = \
feniamanager.cpp \
wrapperbase.cpp \
wrappermanagerbase.cpp \
wrappertarget.cpp \
schedulerwrapper.cpp \
idcontainer.cpp \
regcontainer.cpp \
reglist.cpp \
guts.cpp 

libfenia_la_MOC = \
regcontainer.h \
reglist.h \
schedulerwrapper.h \
wrapperbase.h \
guts.h
