noinst_LTLIBRARIES = libxformat.la 

SUBDIRS = 

include $(top_srcdir)/src/Makefile.inc
INCLUDES = $(INCLUDES_SRC)

libxformat_la_SOURCES = \
xbody.cpp \
xenchant.cpp \
xmaterial.cpp \
xmob.cpp \
xobj.cpp \
xquests.cpp \
xsave.cpp \
xscripts.cpp \
xskills.cpp \
xspells.cpp \
xtempl.cpp \
xwld.cpp \
xzon.cpp \
xshop.cpp \
xhelp.cpp

libxformat_la_MOC = 
